[package]
name = "yaup"
version = "0.2.0"
authors = ["boxdot <d@zerovolt.org>, tamo <tamo@meilisearch.com>"]
license = "MIT/Apache-2.0"
description = "URL parameters serialization"
repository = "https://github.com/irevoire/yaup"
keywords = ["serde", "serialization", "url"]
categories = ["encoding"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
edition = "2021"

[dependencies]
serde = "1"
url = "2"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
