[package]
name = "yaup"
version = "0.2.1"
authors = ["tamo <tamo@meilisearch.com>"]
license = "MIT/Apache-2.0"
description = "URL parameters serialization"
repository = "https://github.com/irevoire/yaup"
keywords = ["serde", "serialization", "url"]
categories = ["encoding"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
edition = "2021"

[dependencies]
serde = "1"
form_urlencoded = "1.2.1"

[dev-dependencies]
insta = "1.39.0"
serde = { version = "1", features = ["derive"] }
