[package]
name = "nyaup"
version = "0.3.1"
authors = ["tamo <tamo@meilisearch.com>"]
license = "MIT/Apache-2.0"
description = "URL parameters serialization"
repository = "https://github.com/meilisearch/yaup"
keywords = ["serde", "serialization", "url", "meilisearch"]
categories = ["encoding"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
edition = "2021"

[dependencies]
serde = "1"
form_urlencoded = "1.2.1"
thiserror = "1.0.61"
castaway = "0.2.3"

[dev-dependencies]
insta = "1.39.0"
maplit = "1.0.2"
serde = { version = "1", features = ["derive"] }
